[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/BlackBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/TomNook.tscn" type="PackedScene" id=2]
[ext_resource path="res://_Buildings/TrainInterior/FloorTiles.png" type="Texture" id=3]
[ext_resource path="res://_Buildings/TrainInterior/Window.png" type="Texture" id=4]
[ext_resource path="res://_Buildings/TrainInterior/Bench.png" type="Texture" id=5]
[ext_resource path="res://_Buildings/TrainInterior/WallPanel.png" type="Texture" id=6]
[ext_resource path="res://_Buildings/DoorHitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Chapters/Chapter01/HitBoxes/RoverDialog1.tscn" type="PackedScene" id=8]
[ext_resource path="res://_Buildings/TrainInterior/TrainInterior.gd" type="Script" id=9]
[ext_resource path="res://SoundFX/Sfx_Library.tscn" type="PackedScene" id=10]
[ext_resource path="res://NPCs/Rover.tscn" type="PackedScene" id=11]
[ext_resource path="res://Events/SceneTransition.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=1]
0/name = "FloorTiles.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 465.659, 128.663, 0, 0, 0, 0, 205, 121, 0, 0, 0, 0, 160, 123, 0, 0, 0, 0, 127, 111 )
}

[node name="World" type="Node2D"]
script = ExtResource( 9 )

[node name="Intro" type="Node2D" parent="."]

[node name="SceneTransition" parent="Intro" instance=ExtResource( 12 )]
position = Vector2( 116.656, 18.8155 )

[node name="BlackBackground" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393218, 0, 0, 393219, 0, 0, 393226, 0, 0, 393227, 0, 0, 393230, 0, 0, 393231, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524293, 0, 0, 524294, 0, 0, 524297, 0, 0, 524298, 0, 0, 524301, 0, 0, 524302, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589829, 0, 0, 589830, 0, 0, 589833, 0, 0, 589834, 0, 0, 589837, 0, 0, 589838, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0 )

[node name="WallPanel" type="Sprite" parent="."]
position = Vector2( 280, 72 )
texture = ExtResource( 6 )

[node name="YSort" type="YSort" parent="."]

[node name="Rover" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 480.659, 123.663 )

[node name="TomNook" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 109, 93 )

[node name="DoorHitBox" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 273, 189 )
target_stage = "res://Chapters/Chapter01/Chapter001.tscn"

[node name="Path2D" type="Path2D" parent="YSort"]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="YSort/Path2D"]
position = Vector2( 465.659, 128.663 )
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Path2D/PathFollow2D"]
position = Vector2( 15, -5 )
remote_path = NodePath("../../../Rover")

[node name="Benches" type="YSort" parent="YSort"]

[node name="Bench" type="Sprite" parent="YSort/Benches"]
position = Vector2( 38, 92 )
texture = ExtResource( 5 )

[node name="Bench2" type="Sprite" parent="YSort/Benches"]
position = Vector2( 29, 135 )
texture = ExtResource( 5 )

[node name="Bench3" type="Sprite" parent="YSort/Benches"]
position = Vector2( 101, 92 )
texture = ExtResource( 5 )

[node name="Bench4" type="Sprite" parent="YSort/Benches"]
position = Vector2( 165, 92 )
texture = ExtResource( 5 )

[node name="Bench5" type="Sprite" parent="YSort/Benches"]
position = Vector2( 229, 92 )
texture = ExtResource( 5 )

[node name="Bench6" type="Sprite" parent="YSort/Benches"]
position = Vector2( 92, 135 )
texture = ExtResource( 5 )

[node name="Bench7" type="Sprite" parent="YSort/Benches"]
position = Vector2( 156, 135 )
texture = ExtResource( 5 )

[node name="Bench8" type="Sprite" parent="YSort/Benches"]
position = Vector2( 220, 135 )
texture = ExtResource( 5 )

[node name="Bench9" type="Sprite" parent="YSort/Benches"]
position = Vector2( 220, 135 )
texture = ExtResource( 5 )

[node name="Windows" type="YSort" parent="YSort"]
__meta__ = {
"_edit_lock_": true
}

[node name="Window" type="Sprite" parent="YSort/Windows"]
position = Vector2( 48, 72 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Window2" type="Sprite" parent="YSort/Windows"]
position = Vector2( 112, 72 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Window3" type="Sprite" parent="YSort/Windows"]
position = Vector2( 176, 72 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Window4" type="Sprite" parent="YSort/Windows"]
position = Vector2( 240, 72 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sfx_Library" parent="." instance=ExtResource( 10 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 9.65
one_shot = true
autostart = true

[node name="Dialog" type="Node2D" parent="."]

[node name="DialogTrig" parent="Dialog" instance=ExtResource( 8 )]
position = Vector2( 109, 100 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="walking_finished" from="YSort/Rover" to="Dialog/DialogTrig" method="_on_Rover_walking_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="dialog_started" from="Dialog/DialogTrig" to="YSort/TomNook" method="_on_DialogTrig_dialog_started"]
